calibre/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre
  labels:
    app: calibre-web
spec:
  selector:
    app: calibre-web
  ports:
  - port: 80
    targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  namespace: calibre
  labels:
    app: calibre-web
spec:
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      name: calibre-web
      labels:
        app: calibre-web
    spec:
      containers:
      - name: calibre-web
        image: linuxserver/calibre-web:0.6.6-ls57
        ports:
        - containerPort: 8083
        volumeMounts:
        - name: books
          mountPath: /books
        - name: config
          mountPath: /config
        readinessProbe:
          httpGet:
            path: /login
            port: 8083
          timeoutSeconds: 10
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /login
            port: 8083
          initialDelaySeconds: 120
          failureThreshold: 5
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
      volumes:
      - name: books
        persistentVolumeClaim:
          claimName: web-books
      - name: config
        persistentVolumeClaim:
          claimName: web-config
