calibre/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: calibre
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - calibre.lukeaddison.co.uk  
    tls:
      httpsRedirect: true
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: lukeaddison-co-uk-wildcard-tls
    hosts:
    - calibre/calibre.lukeaddison.co.uk
