calibre/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: calibre-web
  namespace: calibre
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: calibre-web-tls
    hosts:
    - calibre.lukeaddison.co.uk  
  rules:
  - host: calibre.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: calibre-web
          servicePort: 80
