calibre/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: calibre
  namespace: calibre
spec:
  hosts:
  - calibre.lukeaddison.co.uk
  gateways:
  - istio-system/calibre
  http:
  - match:
    - port: 8443
    route:
    - destination:
        host: calibre-web
