calibre/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: calibre-web
  namespace: calibre
spec:
  selector:
    matchLabels:
      app: calibre-web
  rules:
  - when:
    - key: request.auth.audiences
      values:
      - 189522423084-6opace55ro8aeqqgjsajsm24p6qlis6e.apps.googleusercontent.com
    - key: request.auth.claims[email]
      values:
      - lukeaddison785@gmail.com
      - luke@lukeaddison.co.uk
